--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ p {
   overflow: visible;
 }
 
+.showcase__text {
+  animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase__form {
   position: relative;
   top: 60px;
@@ -136,6 +140,7 @@ p {
   padding: 40px;
   z-index: 100;
   justify-self: flex-end;
+  animation: slideInFromRight 1s ease-in;
 }
 
 .showcase__form .form-control {
@@ -191,6 +196,7 @@ p {
 .stats {
   padding-top: 100px;
   text-align: center;
+  animation: slideInFromBottom 1s ease-in;
 }
 
 .stats__heading {
@@ -347,6 +353,80 @@ p {
   grid-column: 1 / span 2;
 }
 
+/* docs */
+.docs__header {
+  background-color: var(--primary);
+  color: #fff;
+  padding: 50px 0;
+}
+
+.docs__header img {
+  width: 200px;
+  justify-self: flex-end;
+}
+
+.docs__header h1 {
+  font-size: 40px;
+}
+
+.docs__header p {
+  font-size: 20px;
+}
+
+.docs__main {
+  padding: 50px 0;
+}
+
+.docs__main .grid {
+  grid-template-columns: 1fr 2fr;
+  align-items: flex-start;
+}
+
+.docs__main .card:first-of-type {
+  background-color: var(--light);
+}
+
+.docs__main .card ul {
+  margin: 0;
+  padding: 0;
+}
+
+.docs__main .card:first-of-type ul li {
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #ccc;
+}
+
+.docs__main a:hover {
+  font-weight: bold;
+}
+
+.docs__main .active {
+  color: var(--primary);
+}
+
+.docs__main pre {
+  background-color: #333;
+  color: #fff;
+  padding: 15px;
+}
+
+.alert {
+  background-color: var(--light);
+  padding: 10px 20px;
+  font-weight: bold;
+  margin: 15px 0;
+}
+
+.alert i {
+  margin-right: 10px;
+}
+
+.alert--success {
+  background-color: seagreen;
+  color: #fff;
+}
+
 /* footer */
 .footer {
   background-color: var(--dark);
@@ -376,9 +456,46 @@ p {
   margin: 0 10px;
 }
 
+/* animations */
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 /* Tablets and under */
 @media (max-width: 768px) {
-  .grid, .showcase .grid, .stats .grid, .cli .grid, .cloud .grid {
+  .grid, .showcase .grid, .stats .grid, .cli .grid, .cloud .grid, .features__main .grid, .docs__main .grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
@@ -394,11 +511,26 @@ p {
   .showcase__text {
     text-align: center;
     margin-top: 40px;
+    animation: slideInFromTop 1s ease-in;
   }
 
   .showcase__form {
     justify-self: center;
     margin: auto;
+    animation: slideInFromBottom 1s ease-in;
+  }
+
+  .features__header, .features__sub-header, .docs__header {
+    text-align: center;
+  }
+
+  .features__header img, .features__sub-header img, .docs__header img {
+    justify-self: center;
+  }
+
+  .features__main .grid > *:first-child,
+  .features__main .grid > *:nth-child(2) {
+    grid-column: 1;
   }
 }
 
